# hetu-parallel-engine

./: README.md
hetu-cometbft/: .gitignore
hetu-cometbft/config/: config.go
hetu-cometbft/mempool/: clist_mempool.go  narwhal_client.go  narwhal_client_test.go  narwhal_mempool.go  narwhal_mempool_test.go  narwhal_reactor.go
hetu-cometbft/node/: setup.go
hetu-cometbft/proto/: buf.gen.yaml
hetu-cometbft/proto/narwhal/: batch.pb.go  batch.proto  types.pb.go  types.proto
hetu-consensus/: .gitignore  Cargo.toml  README.md
hetu-consensus/benchmark/: fabfile.py
hetu-consensus/cometbft/: Cargo.toml
hetu-consensus/cometbft/src/: cometbft.rs  config.rs  db.rs  engine.rs  genesis.rs  handshake.rs  lib.rs  main.rs  node_key.rs  proxyapp.rs  rpc.rs  validator_key.rs
hetu-consensus/cometbft/src/chain/: mod.rs  state.rs  store.rs  types.rs
hetu-consensus/cometbft/src/consensus/: mod.rs  state.rs  types.rs
hetu-consensus/cometbft/src/rpc/: rpc.rs
hetu-consensus/cometbft/src/tests/: abci_tests.rs  cometbft_tests.rs  engine_tests.rs  mod.rs
hetu-consensus/crypto/src/: lib.rs
hetu-consensus/node/: .committee.json.example  Cargo.toml  build.rs
hetu-consensus/node/proto/: batch.proto
hetu-consensus/node/src/: benchmark_client.rs  main.rs
hetu-consensus/worker/src/: worker.rs
